force-app/main/default/objects/Cat__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kitten</fullName>
            </value>
            <value>
                <fullName>Young Cat</fullName>
            </value>
            <value>
                <fullName>Adult Cat</fullName>
            </value>
            <value>
                <fullName>Senior Cat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>