force-app/main/default/objects/Cat__c/fields/Sterilized__c.field-meta.xml
<CustomField>
    <fullName>Sterilized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sterilized</label>
    <type>Checkbox</type>
</CustomField>