force-app/main/default/objects/Cat__c/fields/Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>Vaccinated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vaccinated</label>
    <type>Checkbox</type>
</CustomField>